--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Wrap the function of the grpc client, don't use callback anymore",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,9 @@
   "bugs": {
     "url": "https://github.com/Beoum/grpc-client-promise-wrapper/issues"
   },
-  "homepage": "https://github.com/Beoum/grpc-client-promise-wrapper#readme"
+  "homepage": "https://github.com/Beoum/grpc-client-promise-wrapper#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "jest": "^27.4.7"
+  }
 }
