--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grpc-client-promise-wrapper",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Wrap the function of the grpc client, don't use callback anymore",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,8 @@
     "wrapper",
     "stub",
     "stubs",
-    "callback"
+    "async",
+    "await"
   ],
   "author": "Beoum",
   "license": "MIT",
